[package]
name = "dice-nom"
version = "0.1.0"
authors = ["Galen Palmer <palmergs@gmail.com>"]
edition = "2021"

[[bin]]
name = "roll"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
nom = "6.0.1"
rand = "0.8.5"
